--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,9 @@ plugins {
 
 android {
     compileSdk 32
-
+    buildFeatures{
+        viewBinding true
+    }
     defaultConfig {
         applicationId "com.chaudharynabin6.materialdesign"
         minSdk 29
@@ -32,7 +34,7 @@ android {
 }
 
 dependencies {
-
+    def material_version = "1.6.1"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
@@ -40,4 +42,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.google.android.material:material:material_version'
 }
